Kubernetes Project/test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  replicas: 1
    selector:
      matchLabels:
        component: simpleWeb
  template:
    metadata:
      labels:
        component: simpleWeb
  spec:
    containers:
      - name: node-app
        image: rohinirao/simpleWeb
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: '128Mi'
            cpu: '500m'
