Kubernetes Project/web-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip-service
spec:
  type: ClusterIP
    selector:
      component: simpleWeb
    ports:
      - port: 8080
        targetPort: 8080
